Closed
Bug 1500484
Opened 7 years ago
Closed 7 years ago
widget/gtk/nsClipboardWayland.cpp:32: fatal error: sys/epoll.h: No such file or directory
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression, Whiteboard: [npotb])
Attachments
(2 files)
|
845 bytes,
patch
|
stransky
:
review+
RyanVM
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
848 bytes,
patch
|
RyanVM
:
approval-mozilla-esr60+
|
Details | Diff | Splinter Review |
$ c++ -v
FreeBSD clang version 7.0.0 (tags/RELEASE_700/final 342383) (based on LLVM 7.0.0)
Target: x86_64-unknown-freebsd12.0
Thread model: posix
InstalledDir: /usr/bin
$ ./mach bootstrap
$ echo "ac_add_options --enable-default-toolkit=cairo-gtk3-wayland" >>.mozconfig
$ ./mach build
[...]
In file included from obj-x86_64-unknown-freebsd12.0/widget/gtk/Unified_cpp_widget_gtk1.cpp:74:
In file included from widget/gtk/nsClipboardWayland.cpp:32:
obj-x86_64-unknown-freebsd12.0/dist/system_wrappers/sys/epoll.h:3:15: fatal error:
'sys/epoll.h' file not found
#include_next <sys/epoll.h>
^~~~~~~~~~~~~
1 error generated.
Summary: Wayland support fails to build on FreeBSD → widget/gtk/nsClipboardWayland.cpp:32: sys/epoll.h:3:15: fatal error: sys/epoll.h: No such file or directory
Summary: widget/gtk/nsClipboardWayland.cpp:32: sys/epoll.h:3:15: fatal error: sys/epoll.h: No such file or directory → widget/gtk/nsClipboardWayland.cpp:32: fatal error: sys/epoll.h: No such file or directory
Assignee: nobody → jbeich
Attachment #9018657 -
Flags: review?(stransky)
Rebased in case of backport. Only context lines changed.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d884084eac9239b0e78266bd8b285f4d53f6cb7d
Comment 3•7 years ago
|
||
Comment on attachment 9018657 [details] [diff] [review]
v1
Looks good, Thanks.
Attachment #9018657 -
Flags: review?(stransky) → review+
Comment 4•7 years ago
|
||
I'd be fine uplifting this to Fx64/ESR60.4, but it's too late for 63 at this point. Feel free to nominate this for Beta/ESR60 approval after it lands on m-c.
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/422dcc2a11ca
Unbreak Wayland build on FreeBSD after bug 1417890. r=stransky
Comment 6•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment on attachment 9018663 [details] [diff] [review]
v1 (esr60)
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: Facilitate regression tracking against patched downstream builds. Also help building Tor Browser which is based on ESR.
User impact if declined: Broken build with Wayland support enabled on non-Linux.
Fix Landed on Version: 64
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Can only break build on Linux. However, Wayland isn't enabled on automation yet.
String or UUID changes made by this patch:
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1417890
User impact if declined: Broken build with Wayland support enabled on non-Linux.
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Can only break build on Linux. However, Wayland isn't enabled on automation yet.
String changes made/needed:
Attachment #9018663 -
Flags: approval-mozilla-release?
Attachment #9018663 -
Flags: approval-mozilla-esr60?
Comment on attachment 9018663 [details] [diff] [review]
v1 (esr60)
Oops, wrong attachment and wrong flag.
Attachment #9018663 -
Flags: approval-mozilla-release?
Comment on attachment 9018657 [details] [diff] [review]
v1
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1417890
User impact if declined: Broken build with Wayland support enabled on non-Linux.
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce:
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Can only break build on Linux. However, Wayland isn't enabled on automation yet.
String changes made/needed:
Attachment #9018657 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 10•7 years ago
|
||
(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #6)
> https://hg.mozilla.org/mozilla-central/rev/422dcc2a11ca
> Target Milestone: --- → mozilla65
hg.mozilla.org shows milestone 64.0a1 but https://hg.mozilla.org/releases/mozilla-beta/file/tip/widget/gtk/nsClipboardWayland.cpp still has <sys/epoll.h> which confirms it landed in Firefox 65. Kinda confusing.
Comment 11•7 years ago
|
||
(In reply to Jan Beich from comment #10)
> hg.mozilla.org shows milestone 64.0a1 but
> https://hg.mozilla.org/releases/mozilla-beta/file/tip/widget/gtk/
> nsClipboardWayland.cpp still has <sys/epoll.h> which confirms it landed in
> Firefox 65. Kinda confusing.
That's because we bump the version on m-c first, but most patches land on integration branches first, so the version can be a bit odd depending on when they first saw the version bump commit.
Comment 12•7 years ago
|
||
Comment on attachment 9018657 [details] [diff] [review]
v1
NPOTB bustage fix for downstream distros using Wayland. Approved for 64.0b4.
Attachment #9018657 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•7 years ago
|
||
Comment on attachment 9018663 [details] [diff] [review]
v1 (esr60)
Approved for the next ESR60-based release too (either 60.3.1 or 60.4.0, depending on whatever we end up building next).
Attachment #9018663 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 14•7 years ago
|
||
| bugherder uplift | ||
Comment 15•7 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•