Bug 1500484 - Unbreak Wayland build on FreeBSD after bug 1417890. r=stransky, a=RyanVM

--HG--
extra : source : 422dcc2a11caca11bc01cf3ca438c66e534afb6d