widget/gtk/nsClipboardWayland.cpp
@@ -29,7 +29,6 @@
 
 #include <gtk/gtk.h>
 #include <poll.h>
-#include <sys/epoll.h>
 #include <stdlib.h>
 #include <string.h>
 #include <fcntl.h>
